# cyber_security_assessment

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Command_Excute.cpp  Command_Excute.h  Event.h  EventChecker.h  Event_h.h  Login.cpp  Login.h  Padding.cpp  Padding.h  Padding2.cpp  Padding2.h  README.md  SSHConnectionPool.h  ServerManager - 副本.cpp  ServerManager.cpp  ServerManager.h  ThreadPool.h  alive_hosts.sql  convert_string_t.cpp  convert_string_t.h  execute_win.cpp  execute_win.h  launch.vs.json  main.cpp  main_1.cpp  multipart_form_data.h  package-lock.json  packages.config  passwords.txt  pgsql_scan.cpp  pgsql_scan.h  redis_scan.cpp  redis_scan.h  ssh_win.cpp  ssh_win.h  template_db.sql  (+6 more)
System_UserManage/: EmailService.h  SecurityUtils.h  User.h
baslinescripts/: 10_check_take_ownership_account_group.ps1  11_check_remote_shutdown_account_group.ps1  17_check_remote_desktop_access.ps1  18_check_local_login_access.ps1  21_check_object_access.ps1  22_check_privilege_use.ps1  23_check_process_tracking.ps1  24_check_logon_events.ps1  25_check_directory_service_access.ps1  26_check_system_events.ps1  27_check_account_logon_events.ps1  28_check_audit_policy_change.ps1  29_check_account_management.ps1  2_password_complexity_enabled.ps1  4_password_history_check.ps1  5_local_user_check.ps1
baslinescripts/winSc/: 30.bat  31.bat  32.bat  33.bat  34.bat  35.bat  36.bat  37.bat  38.bat  39.bat  40.bat  41.bat  42.bat  43.bat  44.bat  45.bat  46.bat  47.bat  48.bat  49.bat  50.bat  51.bat  52.bat  53.bat  54.bat  55.bat  56.bat
database/: DatabaseHandler.cpp  DatabaseHandler.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseWrapper.h  db.cpp  db.h  db_config.cpp  db_config.h  mysql_connection_pool.cpp  mysql_connection_pool.h  output.txt  poc.db  poc.h  system_db.sql
log/: log.cpp  log.h
run/: mysql_scan.cpp  mysql_scan.h
scan/: config.h  hostDiscovery.cpp  hostDiscovery.h  poc_check.cpp  poc_check.h  portScan.cpp  portScan.h  scan_struct.h  utils_scan.cpp  utils_scan.h
scan/lib/: Requests.py  __init__.py
scan/scripts/: CVE_2016_3510.py  CVE_2017_12615.py  CVE_2017_12617.py  CVE_2018_6789.py  CVE_2019_10149.py  CVE_2019_15107.py  CVE_2020_15778_Update.py  Weblogic_CVE_2017_10271_RCE-test.py  Weblogic_CVE_2017_10271_RCE.py  Weblogic_CVE_2017_10271_RCE_test.py  pulse_cve_2019_11510.py  test.py
utils/: CMakeLists.txt  CommonDefs.h  ConfigManager.cpp  ConfigManager.h  config.h  config.json  threadPool.cpp  threadPool.h  utils.cpp  utils.h
utils/jwtUtil/: token_generator.cpp  token_generator.h
